syntax = "proto3";

option go_package = "https://github.com/danieljcksn/connect-four/game/proto";

option java_multiple_files = true;
option java_package = "game";
option java_outer_classname = "GameProto";

package connect4;

// Interface exported by the server.
service Connect4Game{
    rpc GameSession(stream GameCommand) returns (stream GameUpdate);

    // A client-to-server streaming RPC. 
    //
    // Once the server has started the stream, the client can 
    // send the first message in order to connect and start the game.
    rpc Connect(ConnectRequest) returns (ConnectResponse) {};
}   

message GameCommand{
    string command = 1;
    int32 column = 2;
    
    string nickname = 3;
}

message GameUpdate {
  string board = 2;    // Current state of the board
  string message = 3;  // Messages related to game status or errors
}

message ConnectRequest{
    string nickname = 1;
}
message ConnectResponse{
    string message = 1;
}